[gd_scene load_steps=9 format=3 uid="uid://5wbi0v47xd5f"]

[ext_resource type="Script" path="res://scripts/battle/BattleScene.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bqds5n5mt0si" path="res://scenes/Board.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/managers/EffectsManager.gd" id="3"]
[ext_resource type="Script" path="res://scripts/managers/AudioManager.gd" id="4"]
[ext_resource type="Resource" uid="uid://t3o7tyxu71jc" path="res://resources/default_battle_config.tres" id="5"]
[ext_resource type="Script" path="res://scripts/ui/SegmentBar.gd" id="10"]

[sub_resource type="Gradient" id="G1"]
colors = PackedColorArray(1, 0.9, 0.2, 1, 0.8, 0.2, 0.2, 1)

[sub_resource type="GradientTexture2D" id="GT1"]
gradient = SubResource("G1")

[node name="BattleScene" type="Node2D"]
script = ExtResource("1")
battle_config = ExtResource("5")

[node name="EnemyLayer" type="Node2D" parent="."]
z_index = -10

[node name="EnemySprite" type="Sprite2D" parent="EnemyLayer"]
modulate = Color(1, 1, 1, 0.95)
position = Vector2(96, 64)
texture = SubResource("GT1")

[node name="Board" parent="." instance=ExtResource("2")]

[node name="UIRoot" type="CanvasLayer" parent="."]
layer = 100

[node name="HUDRoot" type="Control" parent="UIRoot"]
layout_mode = 3
anchors_preset = 0

[node name="RightHUD" type="Control" parent="UIRoot/HUDRoot"]
z_index = 10
layout_mode = 3
anchors_preset = 0

[node name="EnemyRail" type="Control" parent="UIRoot/HUDRoot/RightHUD"]
anchors_preset = 0

[node name="EnemyRailBar" type="Control" parent="UIRoot/HUDRoot/RightHUD/EnemyRail"]
anchors_preset = 0
script = ExtResource("10")
max_value = 20
value = 20

[node name="EnemyLabel" type="Label" parent="UIRoot/HUDRoot/RightHUD/EnemyRail"]
layout_mode = 0
text = "E
N
E
M
Y

H
P"

[node name="PlayerRail" type="Control" parent="UIRoot/HUDRoot/RightHUD"]
anchors_preset = 0

[node name="PlayerRailBar" type="Control" parent="UIRoot/HUDRoot/RightHUD/PlayerRail"]
anchors_preset = 0
script = ExtResource("10")
max_value = 20
value = 20

[node name="PlayerLabel" type="Label" parent="UIRoot/HUDRoot/RightHUD/PlayerRail"]
layout_mode = 0
text = "Y
O
U
R

H
P"

[node name="APArea" type="Control" parent="UIRoot/HUDRoot/RightHUD"]
anchors_preset = 0

[node name="APBar" type="Control" parent="UIRoot/HUDRoot/RightHUD/APArea"]
anchors_preset = 0
script = ExtResource("10")
max_value = 500
vertical = false
empty_color = Color(0.35, 0.28, 0.02, 1)
fill_color = Color(0.95, 0.85, 0.25, 1)

[node name="APLabel" type="Label" parent="UIRoot/HUDRoot/RightHUD/APArea"]
layout_mode = 0
text = "ACTION POINTS 0/500"

[node name="MenuRoot" type="Control" parent="UIRoot/HUDRoot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBackdrop" type="Panel" parent="UIRoot/HUDRoot/MenuRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuLabel" type="Label" parent="UIRoot/HUDRoot/MenuRoot"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
text = "Battle Menu
Esc toggles
Hold Shift keeps open"

[node name="Managers" type="Node" parent="."]

[node name="EffectsManager" type="Node" parent="Managers"]
script = ExtResource("3")

[node name="AudioManager" type="Node" parent="Managers"]
script = ExtResource("4")
